--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ body::before {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url(../Images/fond.png);
+    background-image: url(fond.png);
     background-size: 100% 90%;
     opacity: 0.4;
 }
